fud2/tests/snapshots/tests__test@state0_state1_to_state2.snap
---
source: fud2/tests/tests.rs
description: "emit request: state0 state1 -> state2"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

rule t1
  command = echo owo
build _to_stdout_state2: t1 _from_stdin_state0 _from_stdin_state1
  i0 = _from_stdin_state0
  i1 = _from_stdin_state1
  o0 = _to_stdout_state2


default _to_stdout_state2
