fud2/tests/snapshots/tests__test@state0_through_t4_to_state1.snap
---
source: fud2/tests/tests.rs
description: "emit request: state0 -> state1 through t4"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

rule t4
  command = echo ${c0}
c0 = v1
build _to_stdout_state1: t4 _from_stdin_state0
  i0 = _from_stdin_state0
  o0 = _to_stdout_state1


default _to_stdout_state1
