fud2/tests/snapshots/tests__test@state0_to_state2_state1.snap
---
source: fud2/tests/tests.rs
description: "emit request: state0 -> state2 state1"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

rule t2
  command = echo -_-
build _to_stdout_state1 _to_stdout_state2: t2 _from_stdin_state0
  i0 = _from_stdin_state0
  o0 = _to_stdout_state1
  o1 = _to_stdout_state2


default _to_stdout_state2
default _to_stdout_state1
